v<0.1.0>, <20140114> -- Initial release.
v<0.1.1>, <20140119> -- Treat filenames as byte streams, not unicode in analyser.py
v<0.1.2>, <20140120> -- Process files given on the commandline correctly in ccat
v<0.2.0>, <20140121> -- Add the corpus conversion tools to the package
v<0.2.1>, <20140124> -- Fix a bug in the conversion tools decoding,  lots of changes to confirm better with PEP8
v<0.2.2>, <20140128> -- Make convert2xml use multiprocess the same way that analyse_corpus does. Update installation instructions.
v<0.2.3>, <20140129> -- ccat now understands how to turn analysed files into clean text.
v<0.3.0>, <20140129> -- Moved corpus-parallel.py to CorpusTools
v<0.3.1>, <20140204> -- Changed the way multiprocessing is done in convert2xml, readd the disambiguation tag to the analysed docs
v<0.3.2>, <20140205> -- Use the old infra for sme.fst, abbr.txt and corr.txt
v<0.3.3>, <20140213> -- Don't write empty analysis files
v<0.3.4>, <20140218> -- Don't write empty converted files
v<0.3.5>, <20140305> -- New scheme for encoding guessing
v<0.3.6>, <20140329> -- Handle hyph tags
v<0.4.0>, <20140507> -- Convert .doc by using docbook-xsl-ns -> html -> our xml
v<0.5.0>, <20140507> -- Change the way Avvir xml files are converted
v<0.5.1>, <20140821> -- Change the way newstags are handled
v<0.7.0>, <20141008> -- Add add_files_to_corpus script, a script to add files in a given directory to a given corpus