@@ -16,3 +16,4 @@ v<0.4.0>, <20140507> -- Convert .doc by using docbook-xsl-ns -> html -> our xml
 v<0.5.0>, <20140507> -- Change the way Avvir xml files are converted
 v<0.5.1>, <20140821> -- Change the way newstags are handled
 v<0.7.0>, <20141008> -- Add add_files_to_corpus script, a script to add files in a given directory to a given corpus
+v<0.7.1>, <20141008> -- Change the --debug option to --serial in analyse_corpus and remove -r option in ccat
